CODEX- preserve locator recovery evidence origins